add desktop header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <header>
-
         <nav class="navigation">
             <section class="navigation__pages">
                 <a class="navigation__logo">
@@ -30,7 +29,7 @@
                 </a>
             </section>
             <div class="navigation__search">
-                <input class="search__bar">
+                <input class="search__bar" placeholder="Digite seu produto" maxlength="100">
                 <button class="search__button">Buscar</button>
             </div>
         </nav>
